RH-DEMO/base/tekton-2/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-hello-build-event-listener-route
  labels:
    app: quarkus-hello
spec:
  host: quarkus-hello-build.apps.cluster-492gk.492gk.sandbox2076.opentlc.com
  to:
    kind: Service
    name: el-quarkus-hello-build-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
  wildcardPolicy: None
